--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,15 @@ body {
   font-family: sans-serif;
 }
 
-.heading-img {
-  height: 100px;
-  width: 100px;
+.jumbotron {
+  background-image: url("sandwich.jpg");
+}
+.jumbotron h1 {
+  font-size: 6em;
+  color: white;
+  text-shadow: 2px 2px grey;
+}
+
+td {
+  padding-right: 20px;
 }
