--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,16 @@ body {
 td {
   padding-right: 20px;
 }
+
+#menu {
+-webkit-box-shadow: 10px 11px 12px -10px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 11px 12px -10px rgba(0,0,0,0.75);
+box-shadow: 10px 11px 12px -10px rgba(0,0,0,0.75);
+background-image: url("papertexture.jpg");
+margin-top: 30px;
+margin-bottom: 30px;
+padding-top: 20px;
+padding-bottom: 20px;
+
+
+}
