--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,44 @@
+/* Color Scheme: http://paletton.com/#uid=13C0B0kbRt14+E48dwffUpTkImm */
+
+
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #A4B1C0;
+    font-family: 'Roboto', sans-serif;
+}
+
+#navbar {
+    border-color: transparent;
+    background-color: #647B97;
+}
+
+#navbar a {
+    color: white;
 }
 
 .jumbotron {
-  background-image: url("sandwich.jpg");
+    background-image: url("sandwich.jpg");
 }
+
 .jumbotron h1 {
-  font-size: 6em;
-  color: white;
-  text-shadow: 2px 2px grey;
+    font-size: 6em;
+    color: white;
+    text-shadow: 2px 2px grey;
 }
 
 td {
-  padding-right: 20px;
+    padding-right: 20px;
 }
 
 #menu {
--webkit-box-shadow: 10px 11px 12px -10px rgba(0,0,0,0.75);
--moz-box-shadow: 10px 11px 12px -10px rgba(0,0,0,0.75);
-box-shadow: 10px 11px 12px -10px rgba(0,0,0,0.75);
-background-image: url("papertexture.jpg");
-margin-top: 30px;
-margin-bottom: 30px;
-padding-top: 20px;
-padding-bottom: 20px;
-
-
+    -webkit-box-shadow: 10px 11px 12px -10px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 10px 11px 12px -10px rgba(0, 0, 0, 0.75);
+    box-shadow: 10px 11px 12px -10px rgba(0, 0, 0, 0.75);
+    background-image: url("papertexture.jpg");
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
